[package]
name = "simple_totp_generator"
description = "A simple totp generator using sha256 in Rust"
version = "0.1.0"
authors = ["anonimoux2k <anonimoux2k@gmail.com>"]
repository = "https://github.com/anonimoux2k/simple-totp-generator"
homepage = "https://github.com/anonimoux2k/simple-totp-generator"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base32 = "0.5"
hmac = "0.12.1"
sha2 = "0.10.8"
time = "0.3.36"